--- a/examples/main/multiple.html
+++ b/examples/main/multiple.html
@@ -18,8 +18,8 @@
 <button id="mount">mount</button>
 
 
-<div id="react15">react loading...</div>
-<div id="vue">vue loading...</div>
+<div id="react16">react loading...</div>
+<div id="vue3">vue loading...</div>
 
 </body>
 </html>
