vue3 子应用可修改全局状态

--- a/examples/main/multiple.html
+++ b/examples/main/multiple.html
@@ -14,12 +14,11 @@
   </style>
 </head>
 <body>
-<button id="unmount">unmount</button>
+<!-- <button id="unmount">unmount</button>
 <button id="mount">mount</button>
-
-
 <div id="react16">react loading...</div>
-<div id="vue3">vue loading...</div>
+<div id="vue3">vue loading...</div> -->
+<main id="subapp-container"></main>
 
 </body>
 </html>
